--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <p class="text1">Who is JiHyun? ☺️</p>
             </div>
             <div class="left-menu"><img src="smile.jpg" class="profile"><!--
-            --></div><div class="right"><div class="textbox1"><h3 class="text">경쟁력있는 주니어 개발자가 되고 싶은 임지현입니다 😊<br>2001년 02월 13일 생 올해 나이 23<br>한밭대학교 4학년 휴학중</h3></div></div>
+            --></div><div class="right"><div class="textbox1"><h3 class="text">Lim Ji-hyun, February 13, 2001<br>She is a student who dreams of becoming a junior developer.<br>I love challenges and like to learn.<br></h3></div></div>
             <div class="footer"><p> Back-end Developer</p></div>
          </div>
 
