--- a/index.html
+++ b/index.html
@@ -11,20 +11,26 @@
 <body style="background: #BB2649">
 
     <div class="box">
-        <nav>
-            <ul class="navbar">
-                <li><a href="#">Me ! ☺️ </a></li>
-                <li><a href="#">관련활동</a></li>
-                <li><a href="#">사이트</a></li>
-            </ul>
-        </nav>
+        <br><br><br><br>
         <div class="container">
             <div class="header">
-                <p class="text1">Who is JiHyun? ☺️</p>
+                <p class="text1">Who is JiHyun?😊</p>
             </div>
             <div class="left-menu"><img src="smile.jpg" class="profile"><!--
-            --></div><div class="right"><div class="textbox1"><h3 class="text">Lim Ji-hyun, February 13, 2001<br>She is a student who dreams of becoming a junior developer.<br>I love challenges and like to learn.<br></h3></div></div>
-            <div class="footer"><p> Back-end Developer</p></div>
+            --></div><div class="right"><div class="textbox1"><div class="text tag1">#임지현</div>
+                <div class="text tag2">#2001.02.13</div><div class="text tag3">#한밭대_정보통신공학과</div><!--
+                     --><div class="text tag4">#휴학생</div><div class="text tag5">#ESTJ</div><div class="text tag6">#긍정적인</div><!--
+                     --><div class="text tag7">#도전을_사랑함</div><div class="text tag8">#배우는것을_좋아함</div><!--
+                     --><div class="text tag9">#주니어_웹개발자</div><div class="text tag10">#병아리_개발자</div></div>
+            <div class="footer">
+                
+            <div class="navbar text5">
+                <li><a href="#">📌 About_Me</a></li>
+                <li><a href="#">📌 My_Project</a></li>
+                <li><a href="#">📌 My_Record</a></li>
+            </div>
+        </div>
+            </div>
          </div>
 
     </div>
