--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <br><br><br><br>
         <div class="container">
             <div class="header">
-                <p class="text1">Who is JiHyun?😊</p>
+                <p class="text1">This is ZiHyun 😊</p>
             </div>
             <div class="left-menu"><img src="smile.jpg" class="profile"><!--
             --></div><div class="right"><div class="textbox1"><div class="text tag1">#임지현</div>
@@ -24,10 +24,10 @@
                      --><div class="text tag9">#주니어_웹개발자</div><div class="text tag10">#병아리_개발자</div></div>
             <div class="footer">
                 
-            <div class="navbar text5">
-                <li><a href="#">📌 About_Me</a></li>
-                <li><a href="#">📌 My_Project</a></li>
-                <li><a href="#">📌 My_Record</a></li>
+            <div class="navbar text6">
+                <li><a href="#">📌 About_ZiHyun</a></li>
+                <li><a href="#">📌 ZiHyun's_Project</a></li>
+                <li><a href="#">📌 ZiHyun's_Record</a></li>
             </div>
         </div>
             </div>
