--- a/start.html
+++ b/start.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/main.css?after" >   
      <title>Document</title>
-     <body style="background: #BB2649">
+     <body style="background: #BB2649" id="start">
 
         <hr class="hr-top"/>
         <div class="box2">
             <div class="start">
-                Hello, JiHyunWorld!
+                Hello, ZiHyunWorld!
             </div>
             <br><br><br><br>                  
             <div class="text4">
-                Who Is JiHyun?
+                🤨: Who is ZiHyun?
             </div>
             <br>
             <div class="text4 blink">
-                click!
+                😊: click Me!
             </div>
         </div>
         <hr class="hr-bottom"/>
