--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body style="background: #BB2649">
 
-    <div class="box">
+    <div class="box fade">
         <br><br><br><br>
         <div class="container">
             <div class="header">
@@ -34,6 +34,26 @@
          </div>
 
     </div>
+
+    <script>
+
+        let observer= new IntersectionObserver((e)=>{
+           e.forEach((박스)=>{
+             if(박스.isIntersecting){
+             박스.target.style.opacity=1;
+             } 
+           })
+        })
+ 
+        let div = document.querySelectorAll('div')
+        observer.observe(div[0])
+        observer.observe(div[1])
+        observer.observe(div[2])
+        observer.observe(div[3])
+ 
+ 
+     </script>
+ 
 
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
