--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="header">
                 <p class="text1">This is ZiHyun 😊</p>
             </div>
-            <div class="left-menu"><img src="image/smile.jpg"/> <class="profile"><!--
+            <div class="left-menu"><img class="profile" src="https://i.imgur.com/tgx4OsO.jpeg"/><!--
             --></div><div class="right"><div class="textbox1" style="font-family: 'Do Hyeon', sans-serif;"><div class="text tag1">#임지현</div>
                 <div class="text tag2">#2001.02.13</div><div class="text tag3">#한밭대_정보통신공학과</div><!--
                      --><div class="text tag4">#휴학생</div><div class="text tag5">#ESTJ</div><div class="text tag6">#긍정적인</div><!--
@@ -45,12 +45,12 @@
    
     <style>
         .profile{
-    width:260px; 
+    width: 300px; 
     display: block;
     margin-left: 40%; 
     margin-right: auto;
-    margin-top: 30%;
-    margin-left: 37%;
+    margin-top: 15%;
+    margin-left: 34%;
 
 }
 .profile1{
@@ -107,15 +107,7 @@
     vertical-align: top;
     margin-top: -10%;
 }
-.profile{
-    width:260px; 
-    display: block;
-    margin-left: 40%; 
-    margin-right: auto;
-    margin-top: 30%;
-    margin-left: 37%;
 
-}
 .right{
     width: 70%;
     height: 400px;
