--- a/import.html
+++ b/import.html
@@ -18,23 +18,15 @@
 </head>
 <body style="background: #BB2649">
     <form action="/add" method="POST">
-
-
     <div class="box scroll fade" style="overflow-y: scroll;">
         <div class="bepage" id="home" onClick="location.href='index.html'"><img class="beforeimg" src="https://i.imgur.com/CHV0DHi.png"></div>
-        <div class="repage" id="restart" onClick="location.href='project.html'"><img class="restartimg" src="https://i.imgur.com/lnYOrEj.png"></div> 
 
         <div class="container col-md-6 fade-in"></div>
-        <p class="text7" style="font-family: 'Do Hyeon', sans-serif;">✅한밭대학교 교통관리 서비스 앱</p>
-        <div class="left-menu"><img src="https://i.imgur.com/Fcqdpev.png" class="traffic_img"><!--
-        --></div><div class="right"><div class="text12">제작 목적: <span style="color: green;">한밭대학교 학생들의 편리하고 친환경 적인 교통환경 조성을 위해</span> 4인 1조로 대안을 제작하는 
-캡스톤 활동을 하며 제작한 앱이다. 우리 조는 그 대안으로 회전교차로 도입, 
-카풀 활성화를 제시하였고 그 안에서 <span style="color: green;">나의 역할은 카풀 게시판 및 교통 활성화 어플리케이션을 제작</span>하는 것이였다. </div>
-<div class="text12">사용 기술: <span style="color: green;">안드로이드 스튜디오 / JAVA</span> </div>
-<div class="text12">세부 기능: 회전 교차로 사용 시 주의사항 안내 / 학교 내 숨은 주차구역 안내 페이지 /
-    셔틀버스 시간 안내 / <span style="color: green;">카풀 게시판 제작 ( 로그인, 댓글 기능 ) </span></div>
-    <div class="text12">🥈은상수상!</div><img class="win" src="https://i.imgur.com/rgTBDD5.jpg" ><div></div>
-    <div class="text12">📷활동 사진</div><img class="win2" src="https://i.imgur.com/hfF6Boa.jpg">
+        <p class="text7" style="font-family: 'Do Hyeon', sans-serif;">👩‍💻 한밭대학교 코딩동아리 IMPORT</p>
+        <div class="left-menu"><img class="importimg" src="https://i.imgur.com/yjV8D31.png"><img class="alogori" src="https://i.imgur.com/ap8oYIW.png"><!--
+        --><img class="people" src="https://i.imgur.com/pPkaUYc.jpg"><img class="logomake" src="https://i.imgur.com/mIiqXyL.png"></div><div class="right">
+            <div class="text12"> 한밭대학교 유일 정규 코딩동아리 <br><br> 임원진 :  총무  <br><br> 파이썬 - 알고리즘 스터디 운영  <br><br>달력 웹페이지 제작 사이드 프로젝트 <br><br>logo 직접 제작</div>
+    
         </div>
         <div class="footer">  
         </div>
@@ -43,6 +35,28 @@
   
 
 <style>
+    .logomake{
+        width: 80%;
+        margin-left: 104%;
+        margin-top: -110%;
+        float: left;
+    }
+    .people{
+        width: 80%;
+        margin-left: 18%;
+        margin-top: -58%;
+        float: left;
+    }
+    .alogori{
+        width: 80%;
+        margin-left: 100%;
+        margin-top: 2%;
+    }
+    .importimg{
+        width: 80%;
+        margin-left: 20%;
+        margin-top: 20%;
+    }
   .repage{
         width: 9%;
   font-size: 20px;
@@ -121,17 +135,16 @@
   border-radius: 30px 30px / 30px 30px;
 }
 .text12{
-    font-size: 28px;
+    font-size: 35px;
     border: 80px;
-    margin-top: 27px;
-    margin-left: 90px;
+    margin-top: 14px;
+    margin-left: 400px;
     font-weight: bold;
     float:left;
     color: black;
 }
 .text{
-    
-    font-size: 30px;
+    font-size: 40px;
     border: 80px;
     margin-top: 50px;
     margin-left: 100px;
@@ -286,8 +299,9 @@
     margin-top: -10%;
 }
 .right{
-    width: 60%;
+    width: 65%;
     height: 270px;
+    margin-top: -3%;
     background: f1f1e6;
     display: inline-block;
 }
