--- a/import.html
+++ b/import.html
@@ -22,7 +22,7 @@
         <div class="bepage" id="home" onClick="location.href='index.html'"><img class="beforeimg" src="https://i.imgur.com/CHV0DHi.png"></div>
 
         <div class="container col-md-6 fade-in"></div>
-        <p class="text7" style="font-family: 'Do Hyeon', sans-serif;">👩‍💻 한밭대학교 코딩동아리 IMPORT</p>
+        <p class="text7" style="font-family: 'Do Hyeon', sans-serif;">👩‍💻 한밭대학교 <span style="color: green;">코딩동아리 IMPORT</span></p>
         <div class="left-menu"><img class="importimg" src="https://i.imgur.com/yjV8D31.png"><img class="alogori" src="https://i.imgur.com/ap8oYIW.png"><!--
         --><img class="people" src="https://i.imgur.com/pPkaUYc.jpg"><img class="logomake" src="https://i.imgur.com/mIiqXyL.png"></div><div class="right">
             <div class="text12"> 한밭대학교 유일 정규 코딩동아리 <br><br> 임원진 :  총무  <br><br> 파이썬 - 알고리즘 스터디 운영  <br><br>달력 웹페이지 제작 사이드 프로젝트 <br><br>logo 직접 제작</div>
