--- a/about.html
+++ b/about.html
@@ -24,13 +24,47 @@
         <div class="container col-md-6 fade-in">
           
             <div class="header">
-                <p class="text1" style="font-family: 'Acme', sans-serif;">About_ZiHyun <span class="blink">😊</span></p>
+                <p class="text1" style="font-family: 'Acme', sans-serif;">About_ZiHyun <span >😊</span></p>
             </div>
             <div class="left-menu"><img src="https://i.imgur.com/tgx4OsO.jpeg" class="profile1"><!--
-            --></div><div class="right"><div class="textbox1" style="font-family: 'Do Hyeon', sans-serif;"><div class="text5">🙃 <span style="color: green;">경험이 자산이다.</span> 안녕하세요. 코딩을 할 때 내 스스로가 몰입하고 있음을 느끼고, <span style="color: green;">더 경험해보고 싶은 임지현</span>입니다.</div>
-            <div class="text5" >🤩 <span style="color: green;">개발에 관심을 갖게 된 계기</span>는 3학년 2학기에 ‘모바일프로그래밍’ 강의를 수강하며 <span style="color: green;">간단한 앱을 제작</span>해보았던 경험입니다. 이것 저것 기능들을 추가해보며 앱 개발에 흥미를 느꼈고, 코드를 짤 때에 <span style="color: green;">깊게 몰입하고 있는 나</span> 자신을 발견하게 되었습니다. 또 <span style="color: green;">생각한 대로 구현하였을 때의 뿌듯함</span>은 더 깊게 공부하고 싶은 원동력으로 작용하였습니다. </div>
-         <div class="text5">😎 <span style="color: green;">성격의 장점은 친화력, 막중한 책임감</span>입니다. 알바를 할 때 자주 오시는 단골 손님 그리고 알바생들과 항상 이야기 나누며 즐겁게 일하는 것을 좋아합니다. 또한 몸이 아파도 나의 부재로 2배는 힘들 다른 알바생을 위해서 진통제를 먹으며 일을 하곤 하는 성격입니다.</div>
-         <div class="text5">🥲<span style="color: green;"> 성격의 단점은 냉정하고 이성적인 성격</span> 이라는 것입니다. MBTI에서 T 적 사고를 가져, 주변인들에게 간혹 의도치 않게 상처를 주는 경향이 있습니다. 현재에는 친구들의 감정에 공감해 주려 노력하고 있으며, 오해가 생겨 상대가 기분이 나빴다면 진심으로 사과하려 노력하고 있습니다. </div>
+            --></div><div class="right"><div class="textbox1" style="font-family: 'Do Hyeon', sans-serif;">
+              <div class="text5">
+                <details>
+                  <summary>1. 자기소개(휴학의 이유, 성격의 장단점)</summary>
+                  <ul>
+                      <li class="aboutfont"><span style="color: green;">배움과 도전을 좋아하고 이루고자 하는 것은 무슨 일이 있어도 해내는 임지현입니다. </span>
+                        현재 한밭대학교 정보통신공학과 3학년을 마치고 휴학 상태입니다. 
+                        인생에서 <span style="color: green;">‘휴학’은 하나의 도전</span>입니다. 
+                        삶의 방향성을 잡고 스스로 어떤 성향의 사람인지를 알아가고자 휴학을 도전했습니다.
+                        성격의 장점은 <span style="color: green;">친화력과 막중한 책임감</span>, 그리고 단점은 <span style="color: green;">냉정하고 이성적인 성격</span>입니다.</li>
+                    </ul>
+                  </details>
+                  <details>
+                    <summary>2. 개발 쪽 진로를 선택하게 된 계기</summary>
+                  <ul>
+                      <li class="aboutfont"><span style="color: green;">코드를 짤 때 스스로 깊게 몰입하고 있음을 느꼈고, 생각한 대로 구현하였을 때 큰 뿌듯함을 느낀 경험이 개발자가 되겠단 생각의 밑거름</span>이 되었습니다. 
+                        3학년 2학기에 '모바일 프로그래밍'강의를 수강하고, 간단한 어플리케이션을 제작해본 경험이 있습니다. 또한 <span style="color: green;">이때 배웠던 예제코드를 응용하여 1월 한밭대학교 주관 캡스톤 대회에서 앱을 구현하고 은상을 받은 경험</span>이 있습니다. 
+                        이때 자발적으로 활동 기간 동안 매일 밤샘 작업을 하여 완성을 해갈만큼 <span style="color: green;">열정</span>이 있었고, 조원들 그리고 심사위원에게 내가 만든 <span style="color: green;">제작물을 보여줄 때 뿌듯함</span>을 느끼고 이것보다 더 보완해서 <span style="color: green;">시중에 출시할 수 있을 정도</span>의 제작물을 만들어보고 싶다고 생각하였습니다.</li>
+                    </ul>
+                  </details>
+                  <details>
+                    <summary>3. 웹 페이지 제작에 관심을 갖게 된 계기</summary>
+                  <ul>
+                      <li class="aboutfont">웹을 선택하게 된 계기는 <span style="color: green;">IMPORT라는 코딩동아리</span> 덕분입니다. 개발에 대한 열정을 가지고 시작한 IMPORT 동아리에서 동아리 홈페이지를 제작하는 프로젝트에 참여할 기회가 주어져 웹 페이지 제작 공부를 시작하였습니다. 
+                        웹 제작을 할 때 조금 더 흥미를 느꼈고 더 응용이 가능한 것이 많다고 생각되어 웹 개발자를 선택하게 되었습니다.</li>
+                    </ul>
+                  </details>
+                  <details>
+                    <summary>4. 내가 개발자라는 직업에 적합한 인물인가?</summary>
+                    <ul>
+                        <li class="aboutfont"> <span style="color: green;">스스로 생각했을 때 저는 ‘개발자’라는 직업이 잘 맞는 사람이라고 생각합니다.</span> 저는 <span style="color: green;">배우는 것을 좋아하고, 맡은 일엔 책임감이 있는 사람</span>입니다. 
+                          배움에는 종목을 가리지 않고 도전할 수 있으면 도전하는 편이고, 주어진 일을 해결해야 할 땐 며칠 밤낮을 새며 완성해가는 편입니다. 또한 <span style="color: green;">자기 주도 능력으로, 항상 더 나은 해결 방법은 없을까 스스로 문제를 찾아보고, 정의하고 해결하려 노력</span>합니다. 일상생활을 하다 보면, 이런 앱이 혹은 이런 웹 사이트가 있으면 좋을 것 같다 싶은 내용은 메모장 혹은 블로그에 항상 기록하고 있습니다. 
+                          다음에 프로젝트를 하게 된다면 아이디어를 좀 더 보완하고 개발하여, 배포까지 해보는 것이 목표입니다.</li>
+                      </ul>
+              </details>
+              <br>
+              <div class="blink"> <a href="../포스코자소서.docx" download></a>👉더 자세한 내용이 궁금하다면 Click!</div>
+              </div>
         </div>
             <div class="footer">         
             </div>
@@ -40,6 +74,9 @@
     </form>
 
     <style>
+      .aboutfont{
+        font-size: 25px;
+      }
       .bepage{
         width: 9%;
   font-size: 20px;
@@ -270,43 +307,7 @@
     background: fcfce8;
   
 }
-.navbar li{
-    display: inline-block;
-    width: 150px;
-    text-align: center;
-    background-color: #eee;
-    padding: 10px;
-    border-radius: 10px;
-    right: 5px;
-    margin-left: 5%;
-    font-size: 30px;
-   
-}
-.navbar{
-  display: inline-block;
-    width: 150px;
-    text-align: center;
-    background-color: #eee;
-    padding: 10px;
-    border-radius: 10px;
-    right: 5px;
-    margin-left: 10%;
-    font-size: 30px;
-    margin-top: 3%;
 
-}
-.navbar1{
-  display: inline-block;
-    width: 150px;
-    text-align: center;
-    background-color: #eee;
-    padding: 10px;
-    border-radius: 10px;
-    right: 5px;
-    margin-left: -1%;
-    font-size: 30px;
-    margin-top: 3%;
-}
 .main-title{
     color: white;
     font-size:40px;
