--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
                       </ul>
               </details>
               <br>
-              <div class="blink"> <a href="../포스코자소서.docx" download></a>👉더 자세한 내용이 궁금하다면 Click!</div>
+              <div class="text33"> 👉더 자세한 내용은 자기소개서를 참고하세요!</a></div>
               </div>
         </div>
             <div class="footer">         
@@ -74,6 +74,10 @@
     </form>
 
     <style>
+      .text33{
+        font-size: 20px;
+
+      }
       .aboutfont{
         font-size: 25px;
       }
