--- a/shopingmall.html
+++ b/shopingmall.html
@@ -26,11 +26,12 @@
 
         <div class="container col-md-6 fade-in"></div>
         <p class="text7" style="font-family: 'Do Hyeon', sans-serif;">✅ 쇼핑몰 웹 서비스</p>
-        <div class="left-menu"><img src="https://i.imgur.com/AVxjvzf.png" class="shopingmall_img"><!--
-        --><img src="https://i.imgur.com/pM5NKn5.png" class="write_img"><img src="https://i.imgur.com/fVMZ9MX.png" class="list_img"></div><div class="right">
-            <div class="text12">제작 목적: NodeJs와 MongoDB를 학습하기 위해 간단한 게시판 서비스를 클론코딩함. </div>
+        <div class="left-menu"><img src="https://i.imgur.com/AVxjvzf.png" class="shopingmall_img">
+          <img src="https://i.imgur.com/HN8Bgri.png" class="shopingmall2_img"><!--
+        --></div><div class="right">
+            <div class="text12">제작 목적: 리액트 기초 익히기 및 쇼핑몰 클론코딩 </div>
 <div class="text12">사용 기술: <span style="color: green;"> React </span> </div>
-<div class="text12">세부 기능: 로그인, 회원가입 기능 / 회원기능 을 포함한 게시판 / 게시물 발행 기능 / 게시물 검색 기능/ 유저간 채팅 기능</div>
+<div class="text12">세부 기능: 제품 상세페이지 제작 /  장바구니 기능</div>
     
         </div>
         <div class="footer">  
@@ -86,6 +87,12 @@
   margin-left: 15%;
   margin-top: 30%;
 }   
+.shopingmall2_img{
+  width: 350px;
+  display: block;
+  margin-left: 15%;
+  margin-top: 10%;
+}
 .write_img{
     width: 470px;
   display: block;
