--- a/oncoding.html
+++ b/oncoding.html
@@ -24,8 +24,8 @@
         <div class="bepage" id="home" onClick="location.href='index.html'"><img class="beforeimg" src="https://i.imgur.com/CHV0DHi.png"></div>
 
         <div class="container col-md-6 fade-in"></div>
-        <p class="text7" style="font-family: 'Do Hyeon', sans-serif;">🤔 <span style="color: green;">OnCoding</span> 에 참여하고 싶은 이유!</p>
-        <p class="text22" style="font-family: 'Do Hyeon', sans-serif;"><span style="color: green;"> & ZiHyun</span> 을 뽑아야 하는 이유!</p>
+        <p class="text7" style="font-family: 'Do Hyeon', sans-serif;">🤔 <span style="color: green;">ZiHyun</span> 을 뽑아야 하는 이유!</p>
+        <p class="text22" style="font-family: 'Do Hyeon', sans-serif;"><span style="color: green;"> & OnCoding </span> 에 참여하고 싶은 이유!</p>
 
         <div class="left-menu"><img src="https://i.imgur.com/L5kt40A.jpg" class="team_img">
           <img src="https://i.imgur.com/dDlon2u.png" class="idea_img"><!--
